--- a/main.html
+++ b/main.html
@@ -1,15 +1,66 @@
 <!DOCTYPE html>
-
-<html>
+<html lang="en">
 
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <style>
+		:root{
+	           background-color: rgb(135, 206, 235);
+          }
+         .main{
+	           padding: 10px;
+            }
+.first-paragraph{
+	color: white;
+	background-color: black;
+}
+aricle p{
+	margin-box: 20px;
+	padding: 10px;
+}
+article p:nth-child(2){
+	color: initial;
+}
+article p:last-child{
+	color: red;
+}
+.ul{
+	padding: 0;
+	margin: 0;
+	list-style: none;
+}
+.li{
+	width: 50%;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+.i1{
+	background-color: white;
+	font-size: 22px;
+}
+.i2{
+	background-color: grey;
+}
+.i3{
+	background-color: pink;
+}
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+	<main>
+		<p class="first-paragraph">First paragraph</p>
+		<article>
+			<p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum socis natoque penatibus et magnis dis parturient monte</p>
+			<p>Nullum dictum felis eu pede pretium. Integer tincidunt . Cras dapibus.</p>
+			<p>Nam eget dui. Etiam rhncus. Maeccenas tempus. telius eget condimentum rhoncus. sem amet adipiscing sem meque sed ipsum.</p>
+		</article>
+		<ul>
+			<li class="i1">First Item</li>
+			<li class="i2">Second Item</li>
+			<li class="i3">Third Item</li>
+			<li class="i2">Fourth Item</li>
+			<li class="i1">Fifth Item</li>
+		</ul>
+	</main>
 
 </body>
 
